--- a/index.html
+++ b/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Resume Website Template Free Download</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Resume Website Template Free Download" name="keywords" />
-    <meta content="Resume Website Template Free Download" name="description" />
+    <title>Aaditya's</title>
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
