--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Aaditya's</title>
+    <link rel="icon" href="img/pro2.jpg" type="image/jpg">
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
