--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     
     <title>Aaditya</title>
-    
+    <link rel="icon" href="img/pro2.jpg" type="image/jpg">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
