--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     
-    <title>Aaditya</title>
+    <title>Aaditya's</title>
     <link rel="icon" href="img/pro2.jpg" type="image/jpg">
 
     <!-- Favicon -->
